SECOND MAJOR COMMIT

--- a/spillover-of-violence/spillover-of-violence.html
+++ b/spillover-of-violence/spillover-of-violence.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Global Families Research Team">
-<meta name="dcterms.date" content="2025-02-04">
+<meta name="dcterms.date" content="2025-02-05">
 
 <title>The Spillover of Macro-level Violence to Parental Physical Abuse of Children in Low- and Middle-Income Countries</title>
 <style>
@@ -38,6 +38,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="spillover-of-violence_files/libs/quarto-contrib/intersection-observer-polyfill-1.0.0/intersection-observer.js"></script>
 <script src="spillover-of-violence_files/libs/quarto-contrib/scrollama-3.2.0/scrollama.min.js"></script>
 <script src="spillover-of-violence_files/libs/quarto-contrib/closeread-0.1.0/closeread.js"></script>
+<link href="spillover-of-violence_files/libs/quarto-contrib/social-share-1.0.0/social-share.css" rel="stylesheet">
+<link href="spillover-of-violence_files/libs/quarto-contrib/social-share-1.0.0/all.min.css" rel="stylesheet">
 <meta name="mermaid-theme" content="default">
 <script src="spillover-of-violence_files/libs/quarto-diagram/mermaid.min.js"></script>
 <script src="spillover-of-violence_files/libs/quarto-diagram/mermaid-init.js"></script>
@@ -55,6 +57,7 @@ ul.task-list li input[type="checkbox"] {
 
 
 <link rel="stylesheet" href="_extensions/qmd-lab/closeread/closeread.css">
+<link rel="stylesheet" href="spillover-of-violence.css">
 </head>
 
 <body>
@@ -62,6 +65,16 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-full">
 
 <main class="content column-page" id="quarto-document-content">
+      <!-- user-provided yaml closeread style options -->
+      <style>
+        :root {
+          --cr-narrative-background-color-overlay: grey;
+--cr-section-background-color: white;
+--cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
+        }
+      </style>
+    
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
@@ -82,7 +95,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 4, 2025</p>
+      <p class="date">February 5, 2025</p>
     </div>
   </div>
   
@@ -94,9 +107,47 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="background" class="level1">
-<h1>Background</h1>
+<div class="cr-section cr-column-screen sidebar-left">
+<div class="narrative-col">
+<div class="trigger new-trigger" data-focus-on="cr-intro">
+<div class="narrative">
 <p>Through violence socialization processes, exposure to higher rates of violence in the macro context may spill over to family violence, including caregivers’ use of physical child abuse.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-researchquestion">
+<div class="narrative">
+<p>This study examined the associations of violence occurring in macro contexts with parental physical abuse, after accounting for norms justifying women’s exposure to intimate partner violence (IPV) and parental physical punishment against children.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-earth">
+<div class="narrative">
+<p>We used data from 435,131 households with a reference child aged 1 to 17 years across 43 countries from rounds 4 and 5 of the UNICEF Multiple Indicator Cluster Surveys.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-analysis">
+<div class="narrative">
+<p>We employed multilevel logistic regression models to estimate the degree to which country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV—was associated with parental physical abuse after controlling for norms justifying violence against women and children and socio-demographic factors.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-results1">
+<div class="narrative">
+<p>Results indicated that higher levels of endorsement of IPV (OR = 1.024, p &lt; .001) and attitudes endorsing the use of physical punishment with children (OR = 1.016, p &lt; .05) were both associated with higher odds of severe physical child abuse after controlling for covariates.</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-results2">
+<div class="narrative">
+<p>The association of terrorism and political violence with severe physical abuse was mediated by norms that legitimize IPV (indirect b = 0.027, p = .005).</p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-interventions">
+<div class="narrative">
+<p>Interventions aimed at reducing abusive parenting practices in LMICs may benefit from efforts to reduce social norms that support violence against women and children. These interventions should be responsive to trauma-informed approaches that recognize the effects of macro-level violence.</p>
+</div>
+</div>
+</div>
+<div class="sticky-col">
+<div class="sticky-col-stack">
+<div id="cr-intro" class="scale-to-fill sticky">
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div>
@@ -117,10 +168,8 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-</section>
-<section id="objective" class="level1">
-<h1>Objective</h1>
-<p>This study examined the associations of violence occurring in macro contexts with parental physical abuse, after accounting for norms justifying women’s exposure to intimate partner violence (IPV) and parental physical punishment against children.</p>
+</div>
+<div id="cr-researchquestion" class="scale-to-fill sticky">
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div>
@@ -145,16 +194,14 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-</section>
-<section id="participants-and-setting" class="level1">
-<h1>Participants and Setting</h1>
-<p>We used data from 435,131 households with a reference child aged 1 to 17 years across 43 countries from rounds 4 and 5 of the UNICEF Multiple Indicator Cluster Surveys.</p>
+</div>
+<div id="cr-earth" class="scale-to-fill sticky">
 <div class="cell">
 <div id="fig-2" class="cell-output-display quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-642d5ce764590a456d16" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-642d5ce764590a456d16">{"x":{"visdat":{"fbd21f7fdb6d":["function () ","plotlyVisDat"]},"cur_data":"fbd21f7fdb6d","attrs":{"fbd21f7fdb6d":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#009edb","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":0,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(0,158,219,1)"],["1","rgba(0,158,219,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-1eebfd99797cb5f63d17" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-1eebfd99797cb5f63d17">{"x":{"visdat":{"14286ec9f5bf":["function () ","plotlyVisDat"]},"cur_data":"14286ec9f5bf","attrs":{"14286ec9f5bf":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#009edb","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"orthographic","rotation":{"lon":-25,"lat":0,"roll":0}},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(0,158,219,1)"],["1","rgba(0,158,219,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries in MICS
@@ -162,19 +209,102 @@ Figure&nbsp;1: Countries in MICS
 </figure>
 </div>
 </div>
-</section>
-<section id="methods" class="level1">
-<h1>Methods</h1>
-<p>We employed multilevel logistic regression models to estimate the degree to which country-level violence—measured by rates of terrorism and political conflict, homicide, and women’s exposure to IPV—was associated with parental physical abuse after controlling for norms justifying violence against women and children and socio-demographic factors.</p>
-</section>
-<section id="results" class="level1">
-<h1>Results</h1>
-<p>Results indicated that higher levels of endorsement of IPV (OR = 1.024, p &lt; .001) and attitudes endorsing the use of physical punishment with children (OR = 1.016, p &lt; .05) were both associated with higher odds of severe physical child abuse after controlling for covariates. The association of terrorism and political violence with severe physical abuse was mediated by norms that legitimize IPV (indirect b = 0.027, p = .005).</p>
-</section>
-<section id="conclusion" class="level1">
-<h1>Conclusion</h1>
-<p>Interventions aimed at reducing abusive parenting practices in LMICs may benefit from efforts to reduce social norms that support violence against women and children. These interventions should be responsive to trauma-informed approaches that recognize the effects of macro-level violence.</p>
-</section>
+</div>
+<div id="cr-analysis" class="scale-to-fill sticky">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="annotated-equation.png" class="img-fluid figure-img"></p>
+<figcaption>Multilevel Logistic Regression</figcaption>
+</figure>
+</div>
+</div>
+<div id="cr-results1" class="scale-to-fill sticky">
+<div class="cell" data-layout-align="default">
+<div class="cell-output-display">
+<div>
+<p></p><figure class="figure"><p></p>
+<div>
+<pre class="mermaid mermaid-js">flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  IPV[higher levels of \nendorsement of IPV]:::blue --&gt; pabuse[physical child abuse]:::maize
+  
+  CP[attitudes endorsing \ncorporal punishment]:::blue --&gt; pabuse
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+</pre>
+</div>
+<p></p></figure><p></p>
+</div>
+</div>
+</div>
+</div>
+<div id="cr-results2" class="scale-to-fill sticky">
+<div class="cell" data-layout-align="default">
+<div class="cell-output-display">
+<div>
+<p></p><figure class="figure"><p></p>
+<div>
+<pre class="mermaid mermaid-js">flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  terrorism[terrorism and \npolitical violence]:::maize --&gt; IPV[higher levels of \nendorsement of IPV]:::blue
+  
+  IPV --&gt; pabuse[physical child abuse]:::maize
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+</pre>
+</div>
+<p></p></figure><p></p>
+</div>
+</div>
+</div>
+</div>
+<div id="cr-interventions" class="scale-to-fill sticky">
+<div class="cell" data-layout-align="default">
+<div class="cell-output-display">
+<div>
+<p></p><figure class="figure"><p></p>
+<div>
+<pre class="mermaid mermaid-js">flowchart LR
+  %% Nodes %%
+  classDef maize fill:#FFCB05,stroke:#000000,stroke-width:2px,color:#000000;
+  
+  classDef blue fill:#00274C,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef orange fill:#D86018,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+  
+  classDef red fill:#9A3324,stroke:#000000,stroke-width:2px,color:#FFFFFF;
+
+  interventions:::orange --&gt; IPV[higher levels of \nendorsement of IPV]:::blue
+  
+  IPV --&gt; pabuse[physical child abuse]:::maize
+  
+  trauma[trauma informed \napproaches]:::red --&gt; interventions
+  
+  %% Links %%
+  linkStyle 0 stroke:#00274C,stroke-width:2px,color:red;
+
+</pre>
+</div>
+<p></p></figure><p></p>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 </main>
 <!-- /main column -->
@@ -599,6 +729,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://www.linkedin.com/shareArticle?url=https://globalfamilies.quarto.pub/spillover-of-violence&amp;title=Spillover of Violence" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=Spillover of Violence&amp;body=Check out this link:https://globalfamilies.quarto.pub/spillover-of-violence" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://globalfamilies.quarto.pub/spillover-of-violence" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://globalfamilies.quarto.pub/spillover-of-violence&amp;title=Spillover of Violence" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=Spillover of Violence https://globalfamilies.quarto.pub/spillover-of-violence'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a><a href="https://bsky.app/intent/compose?text=https://globalfamilies.quarto.pub/spillover-of-violence Spillover of Violence" target="_blank" class="bsky"><i class="fa-brands fa-bluesky"></i></a></div></div>
 
 
 
