first publish to quartopub

--- a/README.html
+++ b/README.html
@@ -355,7 +355,11 @@ display: none;
 <div id="closeread" class="section level1">
 <h1>closeread</h1>
 <p>closeread projects</p>
-<p><a href="https://globalfamilies.quarto.pub/parenting/">https://globalfamilies.quarto.pub/parenting/</a></p>
+<ul>
+<li><a href="https://globalfamilies.quarto.pub/parenting/">https://globalfamilies.quarto.pub/parenting/</a></li>
+<li><a href="https://globalfamilies.quarto.pub/be-less-wrong/">https://globalfamilies.quarto.pub/be-less-wrong/</a></li>
+<li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a></li>
+</ul>
 </div>
 
 
